fix banner z-index

--- a/_sass/banner.scss
+++ b/_sass/banner.scss
@@ -12,6 +12,7 @@
   position: sticky;
   top: 0;
   height: 50px;
+  z-index: 10;
 }
 .banner i {
   padding: 5px;
